codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__chat_small_idle_h2.snap
---
source: tui2/src/chatwidget/tests.rs
expression: terminal.backend()
---
"╭─ Azure Codex ─────────────────────────"
"│ ● gpt-5.2-codex                      │"
