codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__chat_small_idle_h3.snap
---
source: tui2/src/chatwidget/tests.rs
expression: terminal.backend()
---
">_ Azure Codex  ·  carictrl + k commands"
"                                        "
"                                        "
